--- a/localisation/swnd_canon_map_systems_l_english.yml
+++ b/localisation/swnd_canon_map_systems_l_english.yml
@@ -810,10 +810,10 @@
  NAME_Isde_Naha_S: "Isde Naha"
  NAME_Isde_Naha_P1: "Isde Naha"
  
- #Derrol's Donn
- NAME_Derrols_Donn: "Derrol's Donn"
- NAME_Derrols_Donn_S: "Derrol's Donn"
- NAME_Derrols_Donn_P1: "Derrol's Donn"
+ #Berrol's Donn
+ NAME_Berrols_Donn: "Berrol's Donn"
+ NAME_Berrols_Donn_S: "Berrol's Donn"
+ NAME_Berrols_Donn_P1: "Berrol's Donn"
  
  #Sil'Lume
  NAME_Sil_Lume: "Sil'Lume"
@@ -857,7 +857,7 @@
  NAME_Bogden_P1: "Bogden I"
  NAME_Bogden_P2: "Bogden II"
  NAME_Bogden_P3: "Bogden"
- NAME_Bogden_P3_1: "Bog mooun of Bogden"
+ NAME_Bogden_P3_1: "Bog moon of Bogden"
  NAME_Bogden_P3_2: "Bogden 3"
  NAME_Bogden_P3_3: "Bogg 2"
  NAME_Bogden_P3_4: "Bogg 4"
