--- a/localisation/swnd_wip_bosmeri_l_english.yml
+++ b/localisation/swnd_wip_bosmeri_l_english.yml
@@ -83,108 +83,123 @@
  councilor_ruler_new_order: "Grand Vizier"
  councilor_ruler_new_order_female: "$councilor_ruler_new_order$"
  councilor_ruler_new_order_desc: "The Grand Vizier is the deputy of the Galactic Empire and chief bureaucrat of the Imperial Ruling Council and acts as an intermediary between the Galactic Emperor and high-ranking officials in the Imperial Military as well as the government."
- councilor_ruler_clone_wars_victor: "Veteran Commander"
- councilor_ruler_clone_wars_victor_female: "$councilor_ruler_clone_wars_victor_female$"
- councilor_ruler_clone_wars_victor_desc: "These officers were some of the finest in the Republic and are allowed to resume leadership duties under the Galactic Empire."
- councilor_rebel_sympathy: "Freedom Fighter"
+
+ councilor_ruler_clone_wars_victor: "Supreme Commander of the Imperial Forces"
+ councilor_ruler_clone_wars_victor_female: "$councilor_ruler_clone_wars_victor$"
+ councilor_ruler_clone_wars_victor_desc: "The Supreme Commander of the Imperial Forces is the top military leader, responsible for directing all military operations, fleets, and ground campaigns, reporting directly to the Emperor to maintain Imperial dominance."
+
+ councilor_rebel_sympathy: " Insurgency Coordinator"
  councilor_rebel_sympathy_female: "$councilor_rebel_sympathy$"
- councilor_rebel_sympathy_desc: "Freedom fighters come from all walks of life and are united by their desire to oppose the Empire."
+ councilor_rebel_sympathy_desc: "The Insurgency Coordinator is the strategic linchpin of your council, masterfully organizing and uniting disparate factions within the Alliance to Restore the Republic. Their expertise lies in bringing together diverse rebel groups, each with its own goals and methods, under a common banner. This councilor excels in forging alliances, developing cohesive strategies, and maintaining the delicate balance of power within the Rebellion. Their ability to coordinate resources, intelligence, and operatives is crucial in the fight against the Galactic Empire."
+
  councilor_beacon_of_hope: "Supreme Allied Commander"
  councilor_beacon_of_hope_female: "$councilor_beacon_of_hope$"
  councilor_beacon_of_hope_desc: "The Supreme Allied Commander is responsible for overseeing the various branches of the Rebel Alliance military."
+
  councilor_hutt_cartel: "Kajidii"
  councilor_hutt_cartel_female: "$councilor_hutt_cartel$"
  councilor_hutt_cartel_desc: "The Kajidii is derived from the Hutt concept of Kajidic - a philosophy which guides Hutt life and politics as well as a loose term for any sort of clan, legitimate business, and criminal operations. The Kajidi themselves were leaders of individual kajidics and are subservient to the Hutt Grand Council."
- councilor_hutt_cartel_no_dlc: "Kajidii"
- councilor_hutt_cartel_female_no_dlc: "$councilor_hutt_cartel_no_dlc$"
- councilor_hutt_cartel_no_dlc_desc: "The Kajidii is derived from the Hutt concept of Kajidic - a philosophy which guides Hutt life and politics as well as a loose term for any sort of clan, legitimate business, and criminal operations. The Kajidi themselves were leaders of individual kajidics and subservient to the Hutt Grand Council."
- councilor_mandalorian: "Arbiter"
+
+ councilor_mandalorian: "Grand Arbiter"
  councilor_mandalorian_female: "$councilor_mandalorian$"
- councilor_mandalorian_desc: "The title of Arbiter extends back to just after the Great Galactic War. It is an honorable position for any Mandalorian to hold."
- councilor_mandalorian_clans: "Rally Master"
+ councilor_mandalorian_desc: "Grand Arbiter, a title dating back to the aftermath of the Great Galactic War, holds a revered place in Mandalorian society. This esteemed council position symbolizes the preservation of tradition and values, with the Grand Arbiter playing a crucial role in guiding decisions and upholding the enduring legacy of Mandalorian heritage."
+
+ councilor_mandalorian_clans: "Naur'alor"
  councilor_mandalorian_clans_female: "$councilor_mandalorian$"
- councilor_mandalorian_clans_desc: "With their namesake taken from both the Neo-Crusaders and Death Watch, the Rally Master are recognized as a figure of authority. While historically associated with the command of ground forces, the Rally Master is looked to by newer recruits for guidance in battle."
+ councilor_mandalorian_clans_desc: "Naur'alor, the Mandalorian Forge Master, is the master artisan specializing in crafting and maintaining the iconic Mandalorian armor and weaponry, preserving traditions and ensuring Mandalorian warriors are equipped with formidable gear that blends tradition with innovation. As the custodian of the Mandalorian forge, Naur'alor embodies the essence of Mandalorian craftsmanship, reflecting the strength and resilience of their people."
+
  councilor_mandalorian_khanate: "Al'Ori'Ramikade"
  councilor_mandalorian_khanate_female: "$councilor_mandalorian_khanate$"
  councilor_mandalorian_khanate_desc: "Al'Ori'Ramikade is Mando'a for Commander of the Supercommandos. Although its routinely attached as a secondary title to the Mand'alor, Gar Saxon uses it to appeal to those among Clan Saxon and other defectors."
+
  councilor_mandalorian_creed: "Zealot"
  councilor_mandalorian_creed_female: "$councilor_mandalorian_creed$"
  councilor_mandalorian_creed_desc: "The strictest adherents to the Creed are branded as zealots by outsiders. However, for those that are taken in by Children of the Watch, they embrace the title."
+
  councilor_mandalorian_boba: "Bodyguard"
  councilor_mandalorian_boba_female: "$councilor_mandalorian_boba$"
  councilor_mandalorian_boba_desc: "The chief enforcer and one of the closest members to the Daimyo. They are responsible for their protection as well as instilling order."
+
  councilor_swnd_criminal_heritage: "Enforcer"
  councilor_swnd_criminal_heritage_female: "$councilor_swnd_criminal_heritage$"
  councilor_swnd_criminal_heritage_desc: "Enforcers do the dirty work that most crime lords view as beneath them. Shakedowns and intimidation are some of the most routine jobs they handle."
+
  councilor_corporate_sector: "Direx"
  councilor_corporate_sector_female: "$councilor_corporate_sector$"
  councilor_corporate_sector_desc: "The Direx board, also known as the Executive Directorship Board or Board of Directors, is the executive body of the Corporate Sector Authority. Members on this board are referred to as Direxs and answered directly to the ExO."
- councilor_corporate_sector_no_dlc: "Direx"
- councilor_corporate_sector_no_dlc_female: "$councilor_corporate_sector_no_dlc$"
- councilor_corporate_sector_no_dlc_desc: "The Direx board, also known as the Executive Directorship Board or Board of Directors, is the executive body of the Corporate Sector Authority. Members on this board are referred to as Direxs and answered directly to the ExO."
- councilor_corellian: "Chief Engineer"
+
+ councilor_corellian: "Director of Corporate Affairs"
  councilor_corellian_female: "$councilor_corellian$"
- councilor_corellian_desc: "A single cheif engineer from the Corellian Engineering Corporation is unmatched, even by the most skilled engineers in the Kuat Drive Yards and Sienar Fleet Systems."
+ councilor_corellian_desc: "The Director of Corporate Affairs serves as the liaison between the Corellian Technocracy and the Corellian Engineering Corporation (CEC). They oversee matters concerning the corporation, including contracts, trade agreements, and technological collaborations. They ensure that the interests of the CEC align with the goals and policies of the Technocracy, fostering a strong partnership for mutual benefit."
+
  councilor_hapes_consortium: "Royal High Commander"
  councilor_hapes_consortium_female: "$councilor_hapes_consortium$"
  councilor_hapes_consortium_desc: "The Royal High Commander is the commander-in-chief of the Hapes Consortium's military. The position is usually filled by a veteran commander or an esteemed noble that claims to be of sound military mind."
+
  councilor_bothan_spies: "Spymaster"
  councilor_bothan_spies_female: "$councilor_bothan_spies$"
- councilor_bothan_spies_desc: "Spymasters are high ranking members of the Bothan Spynet. They are experienced individuals that ran their own operations. They also are responsible for their own operatives, overseeing their missions across the galaxy."
- councilor_confederate_remnant: "Warlord"
+ councilor_bothan_spies_desc: "The Spymaster expertise in espionage and subterfuge ensures the security, confidentiality, and success of the Bothan Spynet. Their leadership contributes to maintaining Bothan superiority in intelligence gathering, protecting vital interests, and outmaneuvering adversaries."
+
+ councilor_confederate_remnant: "Director of Economic Autonomy"
  councilor_confederate_remnant_female: "$councilor_confederate_remnant$"
- councilor_confederate_remnant_desc: "Unwilling to surrender and supported by a mixture of local forces and surplus droids, Separatist warlords try to retain some semblence of power and influence in a rapidly changing galaxy."
- councilor_clone_wars_loser: "Warlord"
+ councilor_confederate_remnant_desc: "The Economic Coordinator is a crucial council position in the CIS, tasked with managing economic policies, trade agreements, and ensuring the financial independence of the Confederacy. They work to foster self-sufficiency and economic autonomy, aligning with the CIS's vision of independence."
+
+ councilor_clone_wars_loser: "Separatist Warlord"
  councilor_clone_wars_loser_female: "$councilor_confederate_remnant$"
  councilor_clone_wars_loser_desc: "Unwilling to surrender and supported by a mixture of local forces and surplus droids, Separatist warlords try to retain some semblence of power and influence in a rapidly changing galaxy."
- councilor_trade_federation: "Financial Officer"
+
+ councilor_trade_federation: "Chief Financial Officer"
  councilor_trade_federation_female: "$councilor_trade_federation$"
- councilor_trade_federation_desc: "The fiancial officer is responsible for managing the financial operations of the Trade Federation."
- councilor_trade_federation_no_dlc: "Financial Officer"
- councilor_trade_federation_no_dlc_female: "$councilor_trade_federation_no_dlc$"
- councilor_trade_federation_no_dlc_desc: "The fiancial officer is responsible for managing the financial operations of the Trade Federation."
+ councilor_trade_federation_desc: "The Chief Financial Officer within the Trade Federation is the financial overseer, responsible for managing the organization's fiscal health, optimizing profits, and serving as a liaison between corporate leadership and financial experts. Their role is pivotal in ensuring the Federation's financial stability and success."
+
  councilor_naval_tradition: "Viceprex"
  councilor_naval_tradition_female: "$councilor_naval_tradition$"
  councilor_naval_tradition_desc: "The Viceprex is a part of the Corporate Sector Authority's command structure serving underneath the Direx Board."
- councilor_droid_uprising: "Bakur Mining Representative"
+
+ councilor_droid_uprising: "Elder of the Bowl"
  councilor_droid_uprising_female: "$councilor_droid_uprising$"
- councilor_droid_uprising_desc: "The Bakur Mining Corporation's presence in the Bakuran Senate is anything but unexpected. They speak on behalf of the company and ensure that their interests are understood."
+ councilor_droid_uprising_desc: "The Elder of the Bowl plays a pivotal role in Bakuran society, emblematic of diverse cultures and traditions. They follow the Rule of the Feather and Bowl, passing tests that grant one a small feather and the other a golden bowl. In the aftermath of the Droid Uprising and Bakura's distrust of machinery, the Elder of the Bowl carries forward ancient traditions, symbolizing Bakura's unique cultural tapestry."
+
  councilor_banking_clan: "Director of the Treasury"
  councilor_banking_clan_female: "$councilor_banking_clan$"
- councilor_banking_clan_desc: "The Director of the Treasury is responsible for overseeing the creation and management of the Banking Clan's budget as well as taxation."
- councilor_banking_clan_no_dlc: "Director of the Treasury"
- councilor_banking_clan_no_dlc_female: "$councilor_banking_clan_no_dlc$"
- councilor_banking_clan_no_dlc_desc: "The Director of the Treasury is responsible for overseeing the creation and management of the Banking Clan's budget as well as taxation."
+ councilor_banking_clan_desc: "The Director of the Treasury is the financial steward of the Intergalactic Banking Clan, tasked with overseeing and optimizing the empire's vast wealth, assets, and financial resources. Their pivotal role ensures the Consortium's financial stability, economic success, and diplomatic influence."
+
  councilor_rodian_scouts: "Ranger"
  councilor_rodian_scouts_female: "$councilor_rodian_scouts$"
  councilor_rodian_scouts_desc: "wip"
+
  councilor_trandoshan_tribes: "Huntmaster"
  councilor_trandoshan_tribes_female: "$councilor_trandoshan_tribes$"
  councilor_trandoshan_tribes_desc: "wip"
+
  councilor_black_sun: "Vigo"
  councilor_black_sun_female: "$councilor_black_sun$"
  councilor_black_sun_desc: "From the Old Tionese word for nephew, vigo is a title used by lieutenants within Black Sun's leadership. Never numbering more than nine total and answering directly to the Underlord directly, the title attemps to create a semblance of a famillial bond between leaderhsip."
- councilor_black_sun_no_dlc: "Vigo"
- councilor_black_sun_no_dlc_female: "$councilor_black_sun_no_dlc$"
- councilor_black_sun_no_dlc_desc: "From the Old Tionese word for nephew, vigo is a title used by lieutenants within Black Sun's leadership. Never numbering more than nine total and answering directly to the Underlord directly, the title attemps to create a semblance of a famillial bond between leaderhsip."
+
  councilor_twilek_rebels: "Clan Elder"
  councilor_twilek_rebels_female: "$councilor_twilek_rebels$"
  councilor_twilek_rebels_desc: "The clan elder is the oldest member of a Twilek family clan."
+
  councilor_survival_skills: "Attendant"
  councilor_survival_skills_female: "$councilor_survivor_skills$"
  councilor_survival_skills_desc: "The attendant is a personal assistant to the heads of the Onderonian royal family, assisting in ceremonial and military affairs when needed."
- councilor_calamari_dynasty: "Calamarian Councilor"
+
+ councilor_calamari_dynasty: "Regent"
  councilor_calamari_dynasty_female: "$councilor_calamari_dynasty$"
- councilor_calamari_dynasty_desc: "Made up of both Mon Calamari and Quarren members, the Calamarian councilors represent their cities within the larger governing body."
+ councilor_calamari_dynasty_desc: "The Regent of Mon Calamari assumes a critical role in leading the kingdom's interests, safeguarding its culture, promoting diplomacy, ensuring environmental sustainability, and supporting the ruling monarch in governing the kingdom. They provide counsel, implement policies, represent the monarch's interests, and foster effective communication within the council."
+
  councilor_master_shipbuilders: "Master Shipwright"
  councilor_master_shipbuilders_female: "$councilor_master_shipbuilder$"
  councilor_master_shipbuilders_desc: "Any being skilled at the construction of starships can call themselves a shipwright. However, only the Mon Calamari can claim the title of master shipwrights."
- councilor_genetic_experiments: "Director of Public Relations"
+
+ councilor_genetic_experiments: "Director of Genetic Advancement"
  councilor_genetic_experiments_female: "$councilor_genetic_experiments$"
- councilor_genetic_experiments_desc: "A representative of the Adasca BioMechanical Corporation of Arkania that specializes in speaking on behalf of the company and their subsidiaries."
+ councilor_genetic_experiments_desc: "The Director of Genetic Advancement, in collaboration with the Adasca BioMechanical Corporation, drives genetic research, cloning initiatives, and scientific progress for the Arkanians. Their expertise and leadership contribute to medical breakthroughs and the betterment of Arkanian society."
+
  councilor_chiss_houses: "Speaker"
  councilor_chiss_houses_female: "$councilor_chiss_houses$"
- councilor_chiss_houses_desc: "Speakers are heads of one of the Nine Ruling Families of the Chiss Ascendancy. They are the second highest-ranking member of a Ruling Family and act as delegations to the Syndicure. Furthermore they also represented family interests to others."
+ councilor_chiss_houses_desc: "Speakers are esteemed heads of one of the Nine Ruling Families of the Chiss Ascendancy. As the second highest-ranking members within their respective families, they serve as both representatives to the Syndicure and advocates for family interests in diplomatic dealings with external entities."
+
  councilor_mining_guild: "Guildmaster"
  councilor_mining_guild_female: "$councilor_mining_guild$"
  councilor_mining_guild_desc: "wip"
@@ -203,9 +218,9 @@
  councilor_idyllic_charm: "Aide"
  councilor_idyllic_charm_female: "$councilor_idyllic_charm$"
  councilor_idyllic_charm_desc: "Aides are individuals who assist a person of high political position."
- councilor_house_organa: "Noble"
+ councilor_house_organa: "Viceroy"
  councilor_house_organa_female: "$councilor_house_organa$"
- councilor_house_organa_desc: "Nobles from House Organa are known for their honesty and honor, as well as their skilled diplomatic abilities."
+ councilor_house_organa_desc: "The Viceroy acts as the current monarch's envoy of diplomacy and peace. They excel in negotiations, maintaining relations, and embody Alderaan's peaceful ideals. Their role is to mediate, resolve conflicts, and promote cooperation. As a symbol of House Organa's legacy, they ensure diplomacy and goodwill guide their interactions with other civilizations."
  councilor_swnd_crafters: "Chief Engineer"
  councilor_swnd_crafters_female: "$councilor_swnd_crafters$"
  councilor_swnd_crafters_desc: "Cheif engineers are masters of their trade, whether it is construciton, design, or general upkeep."
